<resources>
    <string name="app_name">Break Reminder</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="title_activity_settings">Settings</string>
    <string name="information">Information</string>
    <string name="help">Help</string>
    <string name="settings_dialog_message">Select your work time</string>
    <string name="settings_summary">Current value is $1</string>
    <string name="settings_unit">Minutes</string>
    <string name="settings_title">Select your work time</string>
    <string name="settings_break_summary">Current value is $1</string>
    <string name="settings_break_title">Select your break time</string>
    <string name="pref_header_general">Edit Profiles</string>
    <string name="pref_title_display_name">Profile name</string>
    <string name="pref_default_display_name">Random</string>
    <string name="pref_current_profile">Select profile</string>
    <string name="pref_current_exercises">Select exercises</string>
    <string name="new_profile">New Profile…</string>
    <string name="play_stop" translatable="false">Play/Stop</string>
    <string name="reset" translatable="false">Reset</string>
    <string name="break_reminder_time" translatable="false">30:00</string>
    <string name="standard_profile">Random,90,5,false,Arms.Legs.Head.Neck.Pelvis.Spinal Column.Torso.;Upper-Body,90,15,true,Arms.Neck.Head.;Torso,30,5,true,Spinal Column.Torso.;Lower-Body,30,5,true,Legs.Pelvis.;</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_stayOn">Screen stays on</string>
    <string name="pref_title_timeLeft">Time left</string>
    <string name="pref_title_vibrate">Vibration</string>
    <string name="_0" translatable="false">0</string>
    <string name="type">Type</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="profile_name">Profile Name</string>
    <string name="interval">Work-Time</string>
    <string name="take_the_break">Take the Break</string>
    <string name="skip_the_break">Skip the Break</string>
    <string name="do_you_want_to_take_the_break">Do you want to take the break?</string>
    <string name="settings_emptyName">The changes could not be applied because the name for the profile was empty!</string>
    <string name="settings_doubleName">The changes could not be applied because there is already a profile with the same name!</string>
    <string name="settings_exercise_summary">Choose the body parts, you want to exercise</string>
    <string name="new_profile_break">Break</string>
    <string name="new_profile_select">Select</string>
    <string name="new_profile_continuously">Start pause automatically</string>
    <string name="new_profile_emptyName">Please enter a name for the profile!</string>
    <string name="new_profile_doubleName">Enter another name, there is already a profile with the same name!</string>
    <string name="continuously">If checked, there will be no possibility to skip the break</string>
    <string name="exercise_description">Make sure to select some exercises! If nothing is selected, there will be no exercises in the break!</string>
    <string name="about">About</string>
    <string name="app_name_long" translatable="false">Privacy Friendly Break Reminder</string>
    <string name="version_number" translatable="false">Version</string>
    <string name="about_author">Authors: </string>
    <string name="about_author_names" translatable="false">Christopher Beckmann, Sergej Alexeev, Jannik Schildknecht</string>
    <string name="about_author_contributors">%s and contributors.</string>
    <string name="about_affiliation">In affiliation with</string>
    <string name="more_info">More Information can be found on:</string>
    <string name="github" translatable="false"><a href="https://github.com/SecUSo/privacy-friendly-break-reminder">Github-Repo</a></string>
    <string name="url" translatable="false"><a href="https://www.secuso.org/pfa">SECUSO-Website</a></string>
    <string name="exercise_summary">Your break will contain exercises for the following body sections:</string>
    <string-array name="type_spinner">
        <item>Head</item>
        <item>Neck</item>
        <item>Arms</item>
        <item>Torso</item>
        <item>Spinal Column</item>
        <item>Pelvis</item>
        <item>Legs</item>
    </string-array>
    <string-array name="value_spinner" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="help_overview_strings">
        <item>Main Screen</item>
        <item>Settings Screen - Overview</item>
        <item>Settings Screen - Profile Settings</item>
        <item>Settings Screen - Notification</item>
        <item>New Profile Screen</item>
        <item>Break Screen</item>
        <item>Disclaimer</item>
    </string-array>
    <string name="_10_00" translatable="false">10:00</string>
    <string name="break_next" translatable="false">Next</string>
    <string name="break_description">Description:</string>
    <string name="break_explanation">Description of the Exercise</string>
    <string name="break_ex">Execution of the Exercise</string>
    <string name="break_execution">Execution:</string>
    <string name="exercise_type">Exercise Type</string>
    <string name="exercise_break">Break</string>
    <string name="exercise_side">Side</string>
    <string name="exercise_repetition">Repetition</string>
    <string name="help_start_screen">1. Spinner to select the profile \n2. Clock shows time and is clickable. Can starts and stop the time. \n3. Button starts and stops the time. \n4. Resets the time</string>
    <string name="help_start_screen_title">Main Screen</string>
    <string name="help_settings_screen">1. Open the drawer and select \'Settings\' \n2. Select \'General\' to enter the profile settings. There you can change name, time and exercises of the profile. \n3. Select \'Notifications\' to activate or deactivate notifications. </string>
    <string name="help_settings_screen2">1. Select a ringtone. \n2. Choose if the mobile phone should vibrate, when the countdown ends. \n3. Choose if you want message notifications.\n4. If the flag is set the screen will stay on, while on main screen.</string>
    <string name="help_settings_screen1">1. Choose the profile to change \n2. Enter the new name \n3. Alter the working time \n4. Alter the break time \n5. Choose if the \'Continuously\' flag is set or not. If it is, the break will start directly. If not, you can choose to take or to skip it. \n6. Choose the sections you want to train in the breaks.</string>
    <string name="help_settings_screen_title">Settings Screen</string>
    <string name="help_create_profile_screen">1. Choose the name of the profile \n2. Choose your work-time\n3. Choose the break-time of this profile \n4. Press on \'Select\', if you want to enter the exercise screen to select the training region of your profile. Ignore it, if you don\'t want to train on this profile. \n5. Check it if you want to take the break directly. Uncheck it, if you want to decide every time if you\'ll take the break.</string>
    <string name="help_create_profile_screen_title">Create New Profile Screen</string>
    <string name="help_break_screen_title">Break Screen</string>
    <string name="help_break_screen">1. Body section for your current exercise. \n2. Clock shows remaining time for the break. If you click on it, it starts or stops.\n3. If it shows \'Break\', it means you have currently break between the exercises and you see the image for the next exercise. If it shows \'Side left or Side right\' then you have to perform the exercise as shown in the picture. If it shows \'Repetition\' then you just repeat current exercise.\n4. Explanation of how the exercise should be performed.\n5. Description of current exercise.</string>
    <string name="help_click_information">To see the images in real size simply click on them. To return back to this view re-click on the image!</string>
    <string name="disclaimer">DISCLAIMER PLACEHOLDER</string>
    <string name="disclaimer_title">Disclaimer</string>
    <string name="tutorial_profiles">Select profiles</string>
    <string name="tutorial_reset_description">Press the button to reset the clock</string>
    <string name="tutorial_reset">Reset the clock</string>
    <string name="tutorial_clock_description">By pressing one of them, the clock starts or stops</string>
    <string name="tutorial_or">or</string>
    <string name="tutorial_profile_description">By clicking on the current profile (\'Random\'), you will see all the currently available profiles. \nYou can add new profiles by clicking on \'New Profiles…\' and edit the current ones in the settings\nIn the beginning there will be 4 predefined profiles</string>
    <string name="tutorial_clock">Start/Stop the clock</string>
    <string name="tutorial_description">Welcome to the Privacy Friendly Break Reminder</string>
    <string name="pref_current_profile_value" translatable="false">0</string>
    <string name="tutorial_help">View Help</string>
    <string name="all_exercises">Legs.Arms.Pelvis.Spinal Column.Torso.Neck.Head.</string>
    <string name="dialog_positive">Okay</string>
    <string name="new_profile_success">Exercises successfully created!</string>
    <string name="help_general_title">General</string>
    <string name="help_general_information">The privacy friendly break reminder helps you to take more regularly breaks and to exercise and get fit!</string>
    <string name="help_general_breaks">You can work out during the breaks, but you don\'t have to! Just create a new profile without exercises to take a simple break.</string>
    <string name="help_general_settings">Alternatively the break profiles and their exercises can be changed in the profile settings</string>
    <string name="help_tipps_title">Tips</string>
    <string name="help_tipps_pomodoro">Scientific studies have shown, that after a 30 minute work-time we start to lose concentration. To optimize your workflow take a 5 minute break every 30 minutes!</string>
    <string name="help_tipps_brac">Other scientific studies have shown, that after 70 minute of work most people have a down time of 20 minutes. To cut of this effect, try to make a 10 minute break after 60 minute of work, to be more efficient.</string>
    <string name="help_protection_title">Information for data protection</string>
    <string name="help_protection_permission">Permissions</string>
    <string name="help_protection_text">The Privacy Friendly Break Reminder only uses the permission for vibration</string>
    <string name="help_tipps_pomodoro_title">Pomodoro</string>
    <string name="help_tepps_brac_title">Basic Rest Activity Circle</string>
    <string name="help_support_clock_title">Interactive clock</string>
    <string name="help_support_clock_descr">By pressing the clock in every stage of this app, the clock can be started and stopped.</string>
    <string name="help_support_next">By clicking on the \'next\' button, the app will choose a new exercise in the current body region. At the same time the clock will be reset on the next full minute, so the time will be spend fully on the exercises.</string>
    <string name="help_support_title">Instruction manual</string>
    <string name="activity_title_manage_exercise_sets">Exercise Sets</string>
    <string name="activity_title_break_reminder" translatable="false">@string/app_name</string>
    <string name="title_activity_tutorial">Tutorial</string>
</resources>