<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group_main" android:checkableBehavior="all">
        <item
            android:id="@+id/nav_timer"
            android:icon="@drawable/ic_alarm_black"
            android:title="@string/activity_title_break_reminder" />
        <item
            android:id="@+id/nav_manage_exercise_sets"
            android:icon="@drawable/ic_list_black_24px"
            android:title="@string/activity_title_manage_exercise_sets" />

    </group>

    <group android:id="@+id/group1" android:checkableBehavior="all">
        <item
            android:id="@+id/nav_tutorial"
            android:icon="@drawable/ic_menu_tutorial"
            android:title="@string/title_activity_tutorial" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/title_activity_settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/help" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />
    </group>

</menu>
