<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:key="notifications_new_message_ringtone"
        android:ringtoneType="notification"
        android:title="@string/pref_title_ringtone" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <SwitchPreference
        android:defaultValue="false"
        android:key="notifications_new_message_vibrate"
        android:title="@string/pref_title_vibrate" />


    <SwitchPreference
        android:defaultValue="false"
        android:key="notifications_new_message_timeLeft"
        android:title="@string/pref_title_timeLeft" />


    <SwitchPreference
        android:defaultValue="false"
        android:key="notifications_stayOn"
        android:title="@string/pref_title_stayOn" />

</PreferenceScreen>
