<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/new_profile_break"
        android:id="@+id/textView21"
        android:layout_marginTop="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/textViewBreak"
        android:layout_alignEnd="@+id/textViewBreak"
        android:layout_alignLeft="@+id/textViewBreak"
        android:layout_alignStart="@+id/textViewBreak"
        android:gravity="center" />
    <TextView
        android:id="@+id/textViewBreak1"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/circle"
        android:clickable="true"
        android:enabled="true"
        android:gravity="center"
        android:text="@string/_10_00"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textIsSelectable="false"
        android:textSize="80sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:background="@drawable/button_normal"
        android:text="@string/cancel" />


</RelativeLayout>