<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@color/white"
    tools:context="orgprivacy_friendly_apps.secuso.privacyfriendlybreakreminder.BreakReminder"
    tools:showIn="@layout/app_bar_break_reminder">


    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="83dp"
        android:popupBackground="@color/white"
        android:spinnerMode="dropdown"
        android:layout_centerHorizontal="true" />


    <Button
        android:id="@+id/button_playStop"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@drawable/button_normal"
        android:text="@string/play_stop"
        android:layout_alignTop="@+id/button_reset"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <Button
        android:id="@+id/button_reset"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="182dp"
        android:textColor="@color/white"
        android:background="@drawable/button_normal"
        android:text="@string/reset"
        android:layout_toRightOf="@+id/button_playStop"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView" />


    <!--
    <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shape="ring">
        <stroke android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="2dp"
            android:color="@color/black" />

    </shape>
    -->

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:enabled="true"
        android:text="@string/break_reminder_time"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textIsSelectable="false"
        android:textSize="60sp"
        android:textStyle="bold"
        android:layout_above="@+id/button_reset"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
